Digit Recognition done

--- a/TFLearn_Sentiment_Analysis.ipynb
+++ b/TFLearn_Sentiment_Analysis.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -500,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word2idx = {word: idx for idx, word in enumerate(vocab)}"
@@ -827,6 +831,43 @@
    "source": [
     "# Training\n",
     "model.fit(trainX, trainY, validation_set=0.1, show_metric=True, batch_size=32, n_epoch=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some results of the experiments I performed, all of them with the same Learning Rate = 0.01:\n",
+    "\n",
+    "Epoch | Batch size | Validation Acc. % | Train Acc. %\n",
+    "---|---|---|---\n",
+    "20 | 128 | 79 | 77\n",
+    "30 | 256 | 66 | 73\n",
+    "---|---|---|---\n",
+    "10 | 64 | 79 | 79\n",
+    "20 | 64 | 81 | 81\n",
+    "30 | 64 | 83 | 85\n",
+    "40 | 64 | 85 | 86\n",
+    "50 | 64 | 83 | 85\n",
+    "60 | 64 | 89 | 87\n",
+    "70 | 64 | 89 | 88\n",
+    "80 | 64 | 85 | 87\n",
+    "90 | 64 | 87 | 90\n",
+    "---|---|---|---\n",
+    "10 | 32 | 83 | 83\n",
+    "20 | 32 | 87 | 85\n",
+    "30 | 32 | 85 | 85\n",
+    "40 | 32 | 87 | 87\n",
+    "50 | 32 | 86 | 90\n",
+    "60 | 32 | 91 | 91\n",
+    "70 | 32 | 91 | 89\n",
+    "80 | 32 | 82 | 91\n",
+    "90 | 32 | 88 | 90\n",
+    "100 | 32 | 90 | 92\n",
+    "110 | 32 | 90 | 91\n",
+    "120 | 32 | 94 | 93\n",
+    "130 | 32 | 92 | 93\n",
+    "\n"
    ]
   },
   {
